--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,28 @@
 <!doctype html> 
 <html lang="fr">
 <head>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta charset="utf-8"> 
-  <title>Accueil</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-	<link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
-	<!--[if lt IE 9]>
-		<script src="assets/vendor/html5shiv/dist/html5shiv.min.js"></script>
-	<![endif]-->
-
+	<!-- @@include includes/head.html {"title": "index"} -->
 </head>
-<body>
+
+<body style="" class="">
 	
 	<header class="header" role="banner">
 		<!-- @@include includes/header.html -->
 	</header><!-- /END Header  -->	
 
 	<div class="main" role="main">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates laborum tenetur quod quaerat placeat quasi aperiam velit, distinctio! Minima maiores harum nulla perferendis, accusantium quasi repudiandae molestias expedita quod cupiditate!</p>
+		<div class="container">
+			<p>Contenu</p>
+		</div>
 	</div><!-- /END Main  -->	
-	
+
+
 	<footer class="footer" role="contentinfo">
 		<!-- @@include includes/footer.html -->
 	</footer><!-- /END Footer  -->	
 	
+	<!-- @@include includes/scripts.html -->
 	
-	<script type="text/javascript" src="assets/vendor/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/js/app.min.js"></script>
 
-	
 </body>
 </html>
